--- a/app/views/tasks/_detail_list.html.erb
+++ b/app/views/tasks/_detail_list.html.erb
@@ -13,7 +13,7 @@
 				<%= hidden_field_tag(:selecttask, @selecttask) %>
 				<%= hidden_field_tag(:selecttarget, @selecttarget) %>
 				<div class="span5">Assign Target to: <%= select_tag 'selectuser', options_from_collection_for_select( @users, :id, :email) %></div>
-				<div class="span2"><%= submit_tag "OK" , :class => "submit btn btn-primary btn-success" %></div>
+				<div class="span2"><%= submit_tag "OK" , :class => "submit btn " %></div>
 			<% end %>
 		</div>
 	<% end %>
@@ -21,10 +21,18 @@
 
 <% if @taskobjects != nil then %>
 	<table class="table table-striped table-bordered table-condensed">
-		<tr><td>Task Objects Name</td><td>Release Date</td><td>Finish Status (one # for 10 cases)</td><td></td></tr>
+		<tr><td>Task Objects Name</td><td>Release Date</td><td>Finish Status </td><td></td></tr>
 		<% @taskobjects.each do |t| %>
 			<tr><td><%= t.device.name %></td><td><%= t.device.created_at.to_date %></td>
 			<td>
+				<% if t.executioncount != nil then %>
+					<% (t.executioncount / 10 + 1).times do %>
+						<font class="btn-small btn-success"> 
+					<% end %>
+					<%= t.executioncount %> Cases
+				<% else %>
+					<%= t.executioncount %> 0 Cases have been completed
+				<% end %>
 			</td>
 			<td></td></tr>
 		<% end %>
@@ -35,7 +43,7 @@
 						<%= hidden_field_tag(:selecttask, @selecttask) %>
 						<%= hidden_field_tag(:selecttarget, @selecttarget) %>
 						<div class="span"><%= select_tag 'taskobject', options_from_collection_for_select( @devices, :id, :name), :class => "textsize6" %></div>
-						<div class="span"><%= submit_tag "+" , :class => "submit  btn btn-primary" %></div>
+						<div class="span"><%= submit_tag "+" , :class => "submit  btn " %></div>
 					<% end %>
 				</td><td></td><td></td>
 			</tr>
@@ -77,7 +85,7 @@
 					<%= hidden_field_tag(:selecttarget, @selecttarget) %>
 					<%= hidden_field_tag(:selecttargetenv, @targetenv.id) %>
 					<div class="span">DEVICES for X: <%= select_tag 'selectdevice', options_from_collection_for_select( @devices, :id, :name), :class => "textsize4" if @devices != nil %></div>
-					<div class="span"><%= submit_tag "+" , :class => "submit  btn btn-primary" %></div>
+					<div class="span"><%= submit_tag "+" , :class => "submit  btn " %></div>
 				<% end %>
 				</div>
 <!-- Select Y -->
@@ -87,36 +95,36 @@
 					<%= hidden_field_tag(:selecttarget, @selecttarget) %>
 					<%= hidden_field_tag(:selecttargetenv, @targetenv.id) %>
 					<div class="span">TESTCASE for Y: <%= select_tag 'selecttestcase', options_from_collection_for_select( @testcases, :id, :name), :class => "textsize4"  %></div>
-					<div class="span"><%= submit_tag "+" , :class => "submit  btn btn-primary" %></div>
+					<div class="span"><%= submit_tag "+" , :class => "submit  btn " %></div>
 				<% end %>
 				</div>
-			<% end %>
 <!-- Select Env -->
-			<div class="span">
-				<%= form_tag controller: "tasks", action: "adddepdevice" do %>
-					<%= hidden_field_tag(:selecttask, @selecttask) %>
-					<%= hidden_field_tag(:selecttarget, @selecttarget) %>
-					<%= hidden_field_tag(:selecttargetenv, @targetenv.id) %>
-					<div class="span">SHOW ENVIRONMENT: <%= select_tag 'selectdevice', options_from_collection_for_select( @devices, :id, :name), :class => "textsize4"  %></div>
-					<div class="span"><%= submit_tag "+" , :class => "submit  btn btn-primary" %></div>
-				<% end %>
-			</div>
-			
+				<div class="span">
+					<%= form_tag controller: "tasks", action: "adddepdevice" do %>
+						<%= hidden_field_tag(:selecttask, @selecttask) %>
+						<%= hidden_field_tag(:selecttarget, @selecttarget) %>
+						<%= hidden_field_tag(:selecttargetenv, @targetenv.id) %>
+						<div class="span">SHOW ENVIRONMENT: <%= select_tag 'selectdevice', options_from_collection_for_select( @devices, :id, :name), :class => "textsize4"  %></div>
+						<div class="span"><%= submit_tag "+" , :class => "submit  btn " %></div>
+					<% end %>
+				</div>
+			<% end %>
 			<table class="table table-bordered table-condensed">
 				<% @colum = 0 %>
 				<tr>
 <!-- First line is testcase list -->
-					<td></td>
+					<td>Devices Under Test</td>
+					<% depexist = false %>
 					<% if @envdepdevices != nil then%>
-						<% depexist = true %>
-						<td></td>
+						<% depexist = true if @envdepdevices.count > 0 %>
+						<td>Test Environment</td>
 					<% end %>
 					<% @envtestcases.each do |c| %>
 						<td>
 							<% if current_user.lead? then %>
-								<%= link_to c.name, c, method: :delete, data: { confirm: "Sure?" }, class: "" %>
+								<%= link_to c.testcase.name, c, method: :delete, data: { confirm: "Sure?" }, class: "" %>
 							<% else %>
-								<%= c.name %>
+								<%= c.testcase.name %>
 							<% end %>
 						</td>
 						<% @colum = @colum + 1 %>
@@ -128,47 +136,51 @@
 	<!-- The first row -->
 						<td>
 							<% if current_user.lead? then %>
-								<%= link_to d.name, d, method: :delete, data: { confirm: "Sure?" }, class: "" %>
+								<%= link_to d.device.name, d, method: :delete, data: { confirm: "Sure?" }, class: "" %>
 							<% else %>
-								<%= d.name %>
+								<%= d.device.name %>
 							<% end %>
 						</td>
-						<% if !depexist then %> 
-							<td>Over All</td> 
-							<% @envtestcases.each do |c| %>
-								<td>
+						
+						<td>Over All</td> 
+						<% @envtestcases.each do |c| %>
+							<td>
 	<!-- test total result will be filled here, a new line -->
-									<% currentexecutions = @thematrix.select { |mx| mx.device_id == d.id and  mx.testcase_id == c.id } %>
-									<% if currentexecutions.count != 0 then %>
-										<% currentexecutions.each do |m| %>
-											<% if m.execution.result == "fail" then %>
-												<font color=red>x</font>
+								<% currentexecutions = @thematrix.select { |mx| mx.device_id == d.device_id and mx.testcase_id == c.testcase_id } %>
+								<% if currentexecutions.count != 0 then %>
+									<% currentexecutions.each do |em| %>
+										<font onmouseover="ShowContent('<%= em.execution.id %>');" onmouseout="HideContent('<%= em.execution.id %>');">
+											<% if em.execution.result == "fail" then %>
+												<%= link_to ' x ', edit_execution_path(em.execution),:onclick=>"window.open(this.href,'create_company', 'height=600, width=600');return false;", :class => "btn-mini btn-danger"  %>(cr:<%=em.execution.bug%>)
 											<% else %>
-												<font color=green>v</font>
+												<%= link_to " v ", edit_execution_path(em.execution),:onclick=>"window.open(this.href,'create_company', 'height=600, width=600');return false;", :class => "btn-mini btn-success" %>
 											<% end %>
-										<% end %>
+										</font>
 									<% end %>
-								</td>
-							<% end %>
-						</tr>
+								<% end %>
+							</td>
+						<% end %>
+					</tr>
 <!-- test environment result, if there're any,  will be filled here -->
-					<% else %> 
-						<td></td>
-						<% @envtestcases.each do %><td></td><% end %>
-						</tr>
+					<% if depexist == true then %>  
 						<% @envdepdevices.each do |dep| %>
 							<tr><td></td>
-								<td><%= link_to dep.name, dep, method: :delete, data: { confirm: "Sure?" }, class: "" %></td>
+								<td>
+								<% if current_user.lead? then %>
+									<%= link_to dep.device.name, dep, method: :delete, data: { confirm: "Sure?" }, class: "" %></td>
+								<% else %>
+									<%= dep.device.name %>
+								<% end %>
 								<% @envtestcases.each do |c| %>
 									<td>
-										<% currentexecutions = @thematrix.select { |mx| mx.device_id == d.id and mx.envdevice_id == dep.id and mx.testcase_id == c.id } %>
+										<% currentexecutions = @thematrix.select { |mx| mx.device_id == d.device_id and mx.envdevice_id == dep.device_id and mx.testcase_id == c.testcase_id } %>
 										<% if currentexecutions.count != 0 then %>
 											<% currentexecutions.each do |em| %>
 												<font onmouseover="ShowContent('<%= em.execution.id %>');" onmouseout="HideContent('<%= em.execution.id %>');">
 													<% if em.execution.result == "fail" then %>
-														<%= link_to 'x'+"(cr:"+em.execution.bug+")", edit_execution_path(em.execution),:onclick=>"window.open(this.href,'create_company', 'height=600, width=600');return false;" %>
+														<%= link_to ' x ', edit_execution_path(em.execution),:onclick=>"window.open(this.href,'create_company', 'height=600, width=600');return false;", :class => "btn-mini btn-danger"  %>(cr:<%=em.execution.bug%>)
 													<% else %>
-														<%= link_to "v", edit_execution_path(em.execution),:onclick=>"window.open(this.href,'create_company', 'height=600, width=600');return false;" %>
+														<%= link_to " v ", edit_execution_path(em.execution),:onclick=>"window.open(this.href,'create_company', 'height=600, width=600');return false;", :class => "btn-mini btn-success" %>
 													<% end %>
 												</font>
 												<div id='<%= em.execution.id %>' class="showmoreinfo">
